fixed small viewport whitespace issue.

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+footer{
+  bottom: 0;
 }
 
 .landing-container{
